--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <!-- Project Coordinates -->
     <groupId>tn.esprit</groupId>
-    <artifactId>tp-foyer</artifactId>
+    <artifactId>tpFoyer-17</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>tp-foyer</name>
     <description>tp-foyer</description>
