--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>tn.esprit</groupId>
-    <artifactId>tp-foyer</artifactId>
-    <version>5.0.0</version>
-    <name>tp-foyer</name>
-    <description>tp-foyer</description>
+    <artifactId>tpFoyer-17</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>tpFoyer-17</name>
+    <description>tpFoyer-17</description>
     <properties>
         <java.version>17</java.version>
     </properties>
