--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,21 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!-- JaCoCo plugin for code coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version> <!-- Make sure to use the latest version -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal> <!-- Prepares JaCoCo agent -->
+                            <goal>report</goal> <!-- Generates the report -->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
