--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   app-kaddem:
     depends_on:
       - mysqlDb
-    image: fatmabi2/tpfoyer:0.0.1  
+    image: fatma849/tpfoyer:0.0.1  
     restart: on-failure
     ports:
       - "8082:8082"
